# Cognivue-AI

./: .gitignore  README.md  details.md  details.txt  host.md  pyproject.toml  render.yaml  requirements.txt
Updates Documents/: QUICKSTART.md
backend/: app.py  fix_migrations.py  manage.py  requirements.txt
backend/accounts/: admin.py  backends.py  jwt_utils.py  models.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py  0002_user_uid.py  0003_user_address_user_branch_user_college_name_and_more.py
backend/cognivue/: __init__.py  asgi.py  settings.py  settings_local.py  urls.py  wsgi.py
backend/core/: gemini.py  question_generator.py  resume_analyzer.py
backend/hr/: email_service.py  models.py  urls.py  views.py
backend/hr/migrations/: 0001_initial.py
backend/interviews/: admin.py  apps.py  models.py  urls.py  views.py
backend/interviews/management/commands/: reset_migrations.py
backend/interviews/migrations/: 0001_initial.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  dynamic-enhancements.css  index.css  main.jsx
frontend/src/components/: Dashboard.jsx  HRDashboard.jsx  HRLoginScreen.jsx  InterviewSession.jsx  Loader.jsx  LoginScreen.jsx  PrivacyPolicy.jsx  ResumeUpload.jsx  SessionDetailPage.jsx  SessionHistory.jsx  TermsOfService.jsx  UserProfile.jsx
