[project]
name = "cognivue-ai"
version = "2.0.0"
description = "Cognivue AI — Django-powered LLM interview preparation platform"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0.0",
    "django-cors-headers>=4.3.1",
    "psycopg2-binary>=2.9.9",
    "dj-database-url>=2.1.0",
    "oauthlib>=3.3.1",
    "requests>=2.32.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
    "pdfplumber>=0.11.0",
    "PyPDF2>=3.0.1",
    "python-dotenv>=1.0.0",
    "werkzeug>=3.0.0",
    "itsdangerous>=2.1.0",
    "gunicorn>=22.0.0",
]
